[workspace]
resolver = "2"
members = [
  "./crates/base",
  "./crates/base_rt",
  "./crates/base_mem_check",
  "./crates/http_utils",
  "./crates/cli",
  "./crates/sb_workers",
  "./crates/sb_env",
  "./crates/sb_core",
  "./crates/sb_os",
  "./crates/cpu_timer",
  "./crates/event_worker",
  "./crates/npm",
  "./crates/sb_graph",
  "./crates/sb_module_loader",
  "./crates/sb_fs",
  "./crates/sb_ai"
]

[workspace.dependencies]
deno_ast = { version = "=0.38.1", features = ["transpiling"] }
deno_broadcast_channel = "0.143.0"
deno_core = "0.278.0"
deno_console = "0.149.0"
deno_crypto = "0.163.0"
deno_fetch = "0.173.0"
deno_fs = { version = "0.59.0", features = ["sync_fs"] }
deno_config = "=0.16.3"
deno_io = "0.59.0"
deno_webgpu = "0.116.0"
deno_canvas = "0.18.0"
deno_graph = "=0.74.5"
deno_http = "0.146.0"
deno_media_type = { version = "0.1.4", features = ["module_specifier"] }
deno_net = "0.141.0"
deno_npm = "0.18.0"
deno_url = "0.149.0"
deno_semver = "0.5.4"
deno_tls = "0.136.0"
deno_webidl = "0.149.0"
deno_web = "0.180.0"
deno_websocket = "0.154.0"
deno_webstorage = "0.144.0"
deno_cache_dir = "=0.6.1"

# hazmat needed for PrehashSigner in ext/node
rsa = { version = "0.9.3", default-features = false, features = ["std", "pem", "hazmat"] }

url = "2.3.1"
eszip = "=0.68.2"
log = "0.4.20"
anyhow = "1.0.57"
libc = "0.2.144"
enum-as-inner = "0.6.0"
serde = { version = "1.0.149", features = ["derive"] }
hyper = "0.14.26"
tokio = { version = "1.36.0", features = ["full"] }
bytes = "1.4.0"
once_cell = "1.17.1"
thiserror = "1.0.40"
deno_lockfile = "0.19.0"
async-trait = "0.1.73"
indexmap = { version = "2.0.0", features = ["serde"] }
flate2 = "=1.0.26"
tar = "=0.4.40"
regex = "^1.7.0"
fs3 = "0.5.0"
tokio-util = "0.7.4"
uuid = { version = "1.3.0", features = ["v4"] }
monch = "=0.5.0"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks", "json"] }
ring = "^0.17.0"
urlencoding = "2.1.2"
import_map = { version = "=0.18.0", features = ["ext"] }
base64 = "0.21.4"
futures = "0.3.28"
futures-util = "0.3.28"
ctor = "0.2.6"
fastwebsockets = { version = "0.4.4", features = ["upgrade"] }
percent-encoding = "=2.3.1"
scopeguard = "1.2.0"
glob = "0.3.1"
httparse = "1.8"
http = "0.2"
faster-hex = "0.9.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
rkyv = "0.7"
tempfile = "3"

[patch.crates-io]
# TODO(Nyannyacha): Patch below is temporary. Clean the line in the Deno 1.44 update.
deno_core = { git = "https://github.com/supabase/deno_core", branch = "278-supabase" }
eszip = { git = "https://github.com/supabase/eszip", branch = "fix-pub-vis-0-68-2" }

[profile.dind]
inherits = "dev"

[profile.no-debug-assertions]
inherits = "dev"
debug-assertions = false

[profile.release]
lto = true
