[workspace]
resolver = "2"
members = [
  "cli",
  "crates/base",
  "crates/base_rt",
  "crates/base_mem_check",
  "crates/http_utils",
  "crates/deno_manifest",
  "crates/cpu_timer",
  "crates/npm",
  "crates/npm_cache",
  "crates/graph",
  "crates/eszip_async_trait",
  "crates/module_loader",
  "crates/fs",
  "ext/node",
  "ext/workers",
  "ext/event_worker",
  "ext/env",
  "ext/core",
  "ext/os",
  "ext/ai",
  "ext/ai/utilities"
]

[workspace.dependencies]
deno_ast = { version = "=0.40.0", features = ["transpiling"] }
deno_core = "0.293.0"
deno_broadcast_channel = "0.155.0"
deno_canvas = "0.30.0"
deno_cache = "0.93.0"
deno_console = "0.161.0"
deno_crypto = "0.175.0"
deno_fetch = "0.185.0"
deno_fs = { version = "0.71.0", features = ["sync_fs"] }
deno_http = "0.159.0"
deno_io = "0.71.0"
deno_net = "0.153.0"
deno_tls = "0.148.0"
deno_url = "0.161.0"
deno_web = "0.192.0"
deno_webgpu = "0.128.0"
deno_webidl = "0.161.0"
deno_websocket = "0.166.0"
deno_webstorage = "0.156.0"
deno_media_type = { version = "0.1.4", features = ["module_specifier"] }
deno_config = { version = "=0.22.2", default-features = false }
deno_graph = "=0.80.1"
deno_npm = "0.21.4"
deno_semver = "=0.5.6"
deno_cache_dir = "=0.10.0"
deno_lockfile = "0.20.0"
deno_permissions = "0.21.0"

# local crates
cli = { version = "0.1.0", path = "./cli" }
deno_manifest = { path = "./crates/deno_manifest" }
base = { version = "0.1.0", path = "./crates/base" }
base_rt = { version = "0.1.0", path = "./crates/base_rt" }
base_mem_check = { version = "0.1.0", path = "./crates/base_mem_check" }
http_utils = { version = "0.1.0", path = "./crates/http_utils" }
cpu_timer = { version = "0.1.0", path = "./crates/cpu_timer" }
npm = { version = "0.1.0", path = "./crates/npm" }
npm_cache = { version = "0.1.0", path = "./crates/npm_cache" }
graph = { version = "0.1.0", path = "./crates/graph" }
eszip_async_trait = { version = "0.1.0", path = "./crates/eszip_async_trait" }
module_loader = { version = "0.1.0", path = "./crates/module_loader" }
fs = { version = "0.1.0", path = "./crates/fs" }

# exts
sb_node = { version = "0.1.0", path = "./ext/node" }
sb_workers = { version = "0.1.0", path = "./ext/workers" }
sb_event_worker = { version = "0.1.0", path = "./ext/event_worker" }
sb_env = { version = "0.1.0", path = "./ext/env"}
sb_core = { version = "0.1.0", path = "./ext/core" }
sb_os = { version = "0.1.0", path = "./ext/os" }
sb_ai = { version = "0.1.0", path = "./ext/ai" }
sb_ai_v8_utilities = { version = "0.1.0", path = "./ext/ai/utilities" }

# crypto
hkdf = "0.12.3"
rsa = { version = "0.9.3", default-features = false, features = ["std", "pem", "hazmat"] } # hazmat needed for PrehashSigner in crates/node

# unix
nix = "=0.26.2"

# windows
winapi = "=0.3.9"
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_Media", "Win32_Storage_FileSystem"] }

# webcpu
wgpu-core = "0.21.1"
wgpu-types = "0.20"

url = { version = "< 2.5.0", features = ["serde", "expose_internals"] } # upgrading past 2.4.1 may cause WPT failures
eszip = "=0.72.2"
log = "0.4.20"
anyhow = "1.0.57"
libc = "0.2.144"
libz-sys = { version = "1.1", default-features = false }
num-traits = "0.2"
enum-as-inner = "0.6.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
hyper = { version = "=1.4.0", features = ["full"] }
hyper_v014 = { package = "hyper", version = "0.14.26", features = ["runtime", "http1"] }
hyper-util = { version = "=0.1.6", features = ["tokio", "server", "server-auto"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.4"
bytes = "1.4.0"
once_cell = "1.17.1"
thiserror = "1.0.61"
async-trait = "0.1.73"
indexmap = { version = "2", features = ["serde"] }
flate2 = { version = "=1.0.26", default-features = false }
tar = "=0.4.40"
regex = "^1.7.0"
fs3 = "0.5.0"
uuid = { version = "1.3.0", features = ["v4"] }
monch = "=0.5.0"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks", "json", "http2"] } # pinned because of https://github.com/seanmonstar/reqwest/pull/1955
reqwest_v011 = { package = "reqwest", version = "0.11", features = ["stream", "json", "multipart"] }
ring = "^0.17.0"
import_map = { version = "=0.20.0", features = ["ext"] }
base32 = "=0.4.0"
base64 = "0.21.4"
futures = "0.3.21"
futures-util = "0.3.30"
ctor = "0.2.6"
fastwebsockets = { version = "0.6", features = ["upgrade", "unstable-split"] }
percent-encoding = "2.3.0"
scopeguard = "1.2.0"
clap = { version = "4.0.29", features = ["cargo", "string", "env"] }
glob = "0.3.1"
httparse = "1.8.0"
http = "1.0"
http-body-util = "0.1"
http_v02 = { package = "http", version = "0.2.9" }
h2 = "0.4.4"
faster-hex = "0.9"
num-bigint = { version = "0.4", features = ["rand"] }
notify = "=5.0.0"
parking_lot = "0.12.0"
rustls = "0.22.4"
rustls-pemfile = "2"
rustls-tokio-stream = "=0.2.23"
aes = "=0.8.3"
brotli = "6.0.0"
cbc = { version = "=0.1.2", features = ["alloc"] }
ecb = "=0.1.2"
data-encoding = "2.3.3"
elliptic-curve = { version = "0.13.4", features = ["alloc", "arithmetic", "ecdh", "std", "pem", "jwk"] }
p224 = { version = "0.13.0", features = ["ecdh"] }
p256 = { version = "0.13.2", features = ["ecdh", "jwk"] }
p384 = { version = "0.13.0", features = ["ecdh", "jwk"] }
sha1 = { version = "0.10.6", features = ["oid"] }
sha2 = { version = "0.10.8", features = ["oid"] }
lazy-regex = "3"
rand = "=0.8.5"
signature = "2.1"
spki = "0.7.2"
urlencoding = "2.1.2"
pin-project = "1"
fxhash = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
rkyv = "0.7"
tempfile = "3"
xxhash-rust = "0.8"
either = "1"
serial_test = "3.0.0"

[patch.crates-io]
# If the PR is merged upstream, remove the line below.
deno_core = { git = "https://github.com/supabase/deno_core", branch = "293-supabase" }
eszip = { git = "https://github.com/supabase/eszip", branch = "fix-pub-vis-0-72-2" }

[profile.dind]
inherits = "dev"

[profile.no-debug-assertions]
inherits = "dev"
debug-assertions = false

[profile.release]
debug = true
lto = "thin"
