[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
deno_ast = { workspace = true }
deno_core = { workspace = true }
deno_console = { workspace = true }
deno_crypto =  { workspace = true }
deno_fetch = { workspace = true }
deno_http =  { workspace = true }
deno_net = { workspace = true }
deno_node = { workspace = true }
deno_url = { workspace = true }
deno_tls = { workspace = true }
deno_webidl = { workspace = true }
deno_web = { workspace = true }
deno_websocket = { workspace = true }
httparse = { version = "1.8.0" }
import_map = { version = "0.15.0" }
log = { workspace = true }
module_fetcher = { path = "../module_fetcher" }
reqwest = { version = "0.11.13" }
tokio = { version = "1.24", features = ["full"] }
url = { version = "2.3.1" }
v8 = { version = "0.60.1", default-features = false }
