[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "A server based on Deno runtime, capable of running JavaScript, TypeScript, and WASM services"

[[bin]]
name = "edge-runtime"
path = "src/main.rs"

[dependencies]
deno_facade.workspace = true

anyhow.workspace = true
base.workspace = true
clap.workspace = true
glob.workspace = true
log.workspace = true
once_cell.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, optional = true }

env_logger = "=0.10.0"

[features]
tracing = ["dep:tracing-subscriber"]
