[package]
name = "deno"
version = "2.1.4"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies]
deno_ast.workspace = true
deno_core.workspace = true

deno_cache_dir.workspace = true
deno_config = { workspace = true, features = ["workspace"] }
deno_crypto.workspace = true
deno_fetch.workspace = true
deno_fs.workspace = true
deno_graph.workspace = true
deno_http.workspace = true
deno_io.workspace = true
deno_lockfile.workspace = true
deno_net.workspace = true
deno_npm.workspace = true
deno_path_util.workspace = true
deno_permissions.workspace = true
deno_semver.workspace = true
deno_tls.workspace = true
deno_url.workspace = true
deno_web.workspace = true
deno_websocket.workspace = true
deno_webstorage.workspace = true

deno_resolver.workspace = true
node_resolver.workspace = true

ext_core.workspace = true
ext_node.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base32.workspace = true
base64.workspace = true
cache_control.workspace = true
chrono = { workspace = true, features = ["now"] }
faster-hex.workspace = true
flate2.workspace = true
fs3.workspace = true
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyper_v014.workspace = true
import_map = { workspace = true, features = ["ext"] }
indexmap.workspace = true
libc.workspace = true
log.workspace = true
notify.workspace = true
once_cell.workspace = true
percent-encoding.workspace = true
rand = { workspace = true, features = ["small_rng"] }
regex.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
twox-hash.workspace = true

bincode = "=1.3.3"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
nix.workspace = true
