[package]
name = "module_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "=0.13.1" }
cache_control = { version = "=0.2.0" }
chrono = { version = "=0.4.22", default-features = false, features = ["clock"] }
data-url = { version= "=0.2.0" }
deno_ast = { version = "0.23.2", features = [ "cjs", "transpiling" ] }
deno_core = { workspace = true }
deno_console = { workspace = true }
deno_crypto =  { workspace = true }
deno_fetch = { workspace = true }
deno_graph = { workspace = true }
deno_node = { workspace = true }
deno_tls = { workspace = true }
deno_web = { workspace = true }
deno_webstorage = { workspace = true }
encoding_rs = { version = "=0.8.31" }
import_map = { version = "=0.13.0" }
log = { workspace = true }
libc = { version = "0.2.126" }
ring = { version = "=0.16.20" }
serde = { version = "1.0" }
tokio = { version = "1.24", features = ["full"] }
twox-hash = { version = "=1.6.3" }
