[package]
name = "base"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deno_ast.workspace = true
deno_broadcast_channel.workspace = true
deno_cache.workspace = true
deno_canvas.workspace = true
deno_config.workspace = true
deno_console.workspace = true
deno_core.workspace = true
deno_crypto.workspace = true
deno_fetch.workspace = true
deno_fs.workspace = true
deno_http.workspace = true
deno_io.workspace = true
deno_net.workspace = true
deno_npm.workspace = true
deno_semver.workspace = true
deno_tls.workspace = true
deno_url.workspace = true
deno_web.workspace = true
deno_webgpu.workspace = true
deno_webidl.workspace = true
deno_websocket.workspace = true

# npm.workspace = true
base_mem_check.workspace = true 
base_rt.workspace = true
cpu_timer.workspace = true
fs.workspace = true
graph.workspace = true
http_utils.workspace = true
module_loader.workspace = true

sb_node.workspace = true
sb_ai.workspace = true
sb_core.workspace = true
sb_env.workspace = true
sb_event_worker.workspace = true
sb_os.workspace = true
sb_workers.workspace = true

# reqwest_v011.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
ctor.workspace = true
either.workspace = true
enum-as-inner.workspace = true
eszip.workspace = true
fastwebsockets.workspace = true
futures-util.workspace = true
http_v02.workspace = true
http-body-util.workspace = true
http.workspace = true
httparse.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper_v014 = { workspace = true, features = ["full", "backports"] }
hyper-util = { workspace = true, features = ["server-graceful"] }
import_map.workspace = true
libc.workspace = true
log.workspace = true
monch.workspace = true
notify.workspace = true 
num-traits.workspace = true
once_cell.workspace = true
pin-project.workspace = true
rustls-pemfile.workspace = true
scopeguard.workspace = true
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
thiserror.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tokio.workspace = true
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "tracing-log"] }
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true

arc-swap = "1.7"
cooked-waker = "5"
flume = "0.11.0"
strum = { version = "0.25", features = ["derive"] }
tls-listener = { version = "0.10", features = ["rustls"] }
tokio-rustls = "0.25.0"

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2"] }

[dev-dependencies]
serial_test.workspace = true
tokio-util = { workspace = true, features = ["rt", "compat"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "tracing-log"] }

async-tungstenite = { version = "0.25.0", default-features = false }
tungstenite = { version = "0.21.0", default-features = false, features = ["handshake"] }

[build-dependencies]
deno_ast.workspace = true
deno_broadcast_channel.workspace = true
deno_cache.workspace = true
deno_canvas.workspace = true
deno_console.workspace = true
deno_core.workspace = true
deno_crypto.workspace = true
deno_fetch.workspace = true
deno_fs.workspace = true
deno_http.workspace = true
deno_io.workspace = true
deno_net.workspace = true
deno_tls.workspace = true
deno_url.workspace = true
deno_web.workspace = true
deno_webgpu.workspace = true
deno_webidl.workspace = true
deno_websocket.workspace = true

# npm.workspace = true
graph.workspace = true

sb_ai.workspace = true
sb_core.workspace = true
sb_env.workspace = true
sb_event_worker.workspace = true
sb_node.workspace = true
sb_os.workspace = true
sb_workers.workspace = true

url.workspace = true

[features]
tracing = ["dep:tracing-subscriber"]
termination-signal-ext = []
