[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_ast.workspace = true
deno_fs.workspace = true
deno_io.workspace = true
deno_core.workspace = true
deno_cache.workspace = true
deno_console.workspace = true
deno_config.workspace = true
deno_crypto.workspace = true
deno_fetch.workspace = true
deno_http.workspace = true
deno_net.workspace = true
deno_url.workspace = true
deno_tls.workspace = true
deno_webidl.workspace = true
deno_web.workspace = true
deno_websocket.workspace = true
deno_broadcast_channel.workspace = true
deno_canvas.workspace = true
deno_webgpu.workspace = true
deno_semver.workspace = true
deno_npm.workspace = true

base_rt.workspace = true
base_mem_check.workspace = true 
cpu_timer.workspace = true
http_utils.workspace = true
graph.workspace = true
module_loader.workspace = true
npm.workspace = true
fs.workspace = true

sb_workers.workspace = true
sb_event_worker.workspace = true
sb_env.workspace = true
sb_core.workspace = true
sb_os.workspace = true
sb_node.workspace = true
sb_ai.workspace = true

libc.workspace = true
async-trait.workspace = true
thiserror.workspace = true
monch.workspace = true
once_cell.workspace = true
anyhow.workspace = true
bytes.workspace = true
httparse.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper_v014 = { workspace = true, features = ["full", "backports"] }
hyper-util = { workspace = true, features = ["server-graceful"] }
http.workspace = true
http_v02.workspace = true
http-body-util.workspace = true
import_map.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
futures-util.workspace = true
url.workspace = true
uuid.workspace = true
eszip.workspace = true
enum-as-inner.workspace = true
urlencoding.workspace = true
scopeguard.workspace = true
ctor.workspace = true
fastwebsockets.workspace = true
notify.workspace = true 
pin-project.workspace = true
rustls-pemfile.workspace = true
tracing.workspace = true
reqwest_v011.workspace = true
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "tracing-log"] }
num-traits.workspace = true
tempfile.workspace = true
either.workspace = true

tls-listener = { version = "0.10", features = ["rustls"] }
strum = { version = "0.25", features = ["derive"] }
flume = "0.11.0"
cooked-waker = "5"
tokio-rustls = "0.25.0"
arc-swap = "1.7"

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2"] }

[dev-dependencies]
eszip_async_trait.workspace = true

tokio-util = { workspace = true, features = ["rt", "compat"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "tracing-log"] }
serial_test.workspace = true

async-tungstenite = { version = "0.25.0", default-features = false }
tungstenite = { version = "0.21.0", default-features = false, features = ["handshake"] }

[build-dependencies]
deno_ast.workspace = true
deno_fs.workspace = true
deno_io.workspace = true
deno_console.workspace = true
deno_crypto.workspace = true
deno_fetch.workspace = true
deno_cache.workspace = true
deno_http.workspace = true
deno_net.workspace = true
deno_url.workspace = true
deno_tls.workspace = true
deno_webidl.workspace = true
deno_web.workspace = true
deno_websocket.workspace = true
deno_broadcast_channel.workspace = true
deno_core.workspace = true
deno_canvas.workspace = true
deno_webgpu.workspace = true

graph.workspace = true
npm.workspace = true

sb_core.workspace = true
sb_workers.workspace = true
sb_event_worker.workspace = true
sb_env.workspace = true
sb_os.workspace = true
sb_node.workspace = true
sb_ai.workspace = true

url.workspace = true

[features]
tracing = ["dep:tracing-subscriber"]
termination-signal-ext = []
