[package]
name = "base_rt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
deno_core.workspace = true

cpu_timer.workspace = true

once_cell.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tokio.workspace = true
tracing.workspace = true
