[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "A server based on Deno runtime, capable of running JavaScript, TypeScript, and WASM services"

[[bin]]
name = "edge-runtime"
path = "src/main.rs"

[dependencies]
deno_core.workspace = true

base = { version = "0.1.0", path = "../base" }

sb_graph = { version = "0.1.0", path = "../sb_graph" }

anyhow.workspace = true
log.workspace = true
tokio.workspace = true
glob.workspace = true
once_cell.workspace = true

clap = { version = "4.0.29", features = ["cargo", "string", "env"] }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "tracing-log"] }
env_logger = "0.10.0"

[build-dependencies]
dotenv-build = "0.1.1"

[features]
tracing = ["dep:tracing-subscriber"]